--- a/index.html
+++ b/index.html
@@ -26,8 +26,92 @@
     <h1 class="lead__title">Путешествия по России</h1>
     <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
     <img class="lead__image" src="../images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
-    <p class="caption">ваша полка — верхняя</p>
+    <p class="lead__caption">ваша полка — верхняя</p>
   </section>
+  <section class="intro">
+    <h2 class="intro__title">Чего мы там не видели?</h2>
+    <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+    <ul class="intro__list">
+      <li>Часовых поясов 11</li>
+      <li>Объектов природного наследия ЮНЕСКО 12</li>
+      <li>Объектов культурного наследия ЮНЕСКО 16</li>
+      <li>Природных заповедников 105</li>
+      <li>Аэропортов 241</li>
+    </ul>
+  </section>
+  <section class="photo-grid">
+    <img class="photo-grid__item" src="/images/photo-grid-train.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-atharva-tulsi.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-tuman.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-sochi.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-atharva-tulsi.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-baikal.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-elbrus.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-kondratiev.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-kamchatka-1.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-kamchatka-2.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-baikal-2.jpg" alt="фото из окна вагона">
+    <img class="photo-grid__item" src="/images/photo-grid-ergaki.jpg" alt="фото из окна вагона">
+  </section>
+  <section class="place">
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <div class="place__image"></div>
+      <div class="place__website">
+        <p class="place__website_url-heading">URL</p>
+        <a class="place__website_link" href="#">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+      <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    </div>
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <div class="place__image"></div>
+      <div class="place__website">
+        <p class="place__website_url-heading">URL</p>
+        <a class="place__website_link" href="#">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+      <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    </div>
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <div class="place__image"></div>
+      <div class="place__website">
+        <p class="place__website_url-heading">URL</p>
+        <a class="place__website_link" href="#">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+      <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    </div>
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <div class="place__image"></div>
+      <div class="place__website">
+        <p class="place__website_url-heading">URL</p>
+        <a class="place__website_link" href="#">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+      <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    </div>
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <div class="place__image"></div>
+      <div class="place__website">
+        <p class="place__website_url-heading">URL</p>
+        <a class="place__website_link" href="#">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+      <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    </div>
+  </section>
+  <section class="cover">
+    <h2 class="cover__title">До Байкала «на собаках»</h2>
+    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+    <div class="cover__overlay"></div>
+    <div class="cover__backgrond"></div>
+  </section>
+
 
 </div>
 </body>
