--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
       <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
     </div>
-    <div class="place">
+    <div class="places">
       <h2 class="place__title">Куршская коса</h2>
       <div class="place__image"></div>
       <div class="place__website">
@@ -109,8 +109,16 @@
     <h2 class="cover__title">До Байкала «на собаках»</h2>
     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
     <div class="cover__overlay"></div>
-    <div class="cover__backgrond"></div>
+    <div class="cover__background"></div>
   </section>
+  <footer class="footer">
+    <a class="footer__link" href="#">Карты</a>
+    <a class="footer__link" href="#">Погода</a>
+    <a class="footer__link" href="#">Расписание</a>
+    <a class="footer__link" href="#">Календарь</a>
+    <a class="footer__link" href="#">Путешествия</a>
+    <p class="footer__copyright">© 2022. Сухов Андрей</p>
+  </footer>
 
 
 </div>
