--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2 class="place__title">Куршская коса</h2>
       <div class="place__website">
         <p class="place__website_url-heading">URL</p>
-        <a class="place__website_link" href="http://park-kosa.ru">park-kosa.ru</a>
+        <a class="place__website_link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
       </div>
       <img class="place__image" src="../images/place-kosa.jpg" alt="Куршская коса">
       <div>
@@ -72,7 +72,7 @@
   <h2 class="place__title">Кольский</h2>
   <div class="place__website">
     <p class="place__website_url-heading">URL</p>
-    <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+    <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
   </div>
   <img class="place__image" src="../images/place-kolsky.jpg" alt="Кольский">
   <div>
@@ -86,7 +86,7 @@
   <h2 class="place__title">Алтай</h2>
   <div class="place__website">
     <p class="place__website_url-heading">URL</p>
-    <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+    <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
   </div>
   <img class="place__image" src="../images/place-altai.jpg" alt="Алтай">
   <div>
@@ -99,7 +99,7 @@
   <h2 class="place__title">Зимний Байкал</h2>
   <div class="place__website">
     <p class="place__website_url-heading">URL</p>
-    <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+    <a class="place__website_link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
   </div>
   <img class="place__image" src="../images/place-winter-baikal.jpg" alt="Зимний Байкал">
   <div>
@@ -113,7 +113,7 @@
   <h2 class="place__title">Карелия</h2>
   <div class="place__website">
     <p class="place__website_url-heading">URL</p>
-    <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+    <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
   </div>
   <img class="place__image" src="../images/place-karelia.jpg" alt="Корелия">
   <div>
@@ -124,19 +124,20 @@
 </div>
   </section>
   <section class="cover">
+    <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
     <h2 class="cover__title">До Байкала «на собаках»</h2>
     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-
-  </section>
+  </a>
+      </section>
   <footer class="footer">
-    <a class="footer__link" href="#">Карты</a>
-    <a class="footer__link" href="#">Погода</a>
-    <a class="footer__link" href="#">Расписание</a>
-    <a class="footer__link" href="#">Календарь</a>
-    <a class="footer__link" href="#">Путешествия</a>
+    <nav>
+    <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+    <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+    <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+    <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+    <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+  </nav>
     <p class="footer__copyright">© 2022. Сухов Андрей</p>
   </footer>
-
-
 </div>
 </body>
