--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
-<body class="page">
-  <div class="page__container">
+<body>
+  <div class="page">
     <header class="header">
       <svg class="header__logo" width="177" height="52" viewBox="0 0 177 52" fill="none"
         xmlns="http://www.w3.org/2000/svg">
@@ -40,6 +40,7 @@
         <a class="header__lang-link" href="#">En</a>
       </div>
     </header>
+    <main>
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках
@@ -173,6 +174,7 @@
           до&nbsp;Байкала на&nbsp;электричках.</p>
       </a>
     </section>
+  </main>
     <footer class="footer">
       <nav class="footer__nav">
         <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
