--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+            <p class="place__website place__website_url-heading">URL</p>
+            <a class="place__website place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
               target="_blank">National Geographic</a>
           </div>
           <img class="place__image" src="../images/place-kolsky.jpg" alt="Кольский">
@@ -99,8 +99,8 @@
         <div class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+            <p class="place__website place__website_url-heading">URL</p>
+            <a class="place__website place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
               target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="../images/place-altai.jpg" alt="Алтай">
@@ -118,8 +118,8 @@
         <div class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="https://vk.com/baikalmile"
+            <p class="place__website place__website_url-heading">URL</p>
+            <a class="place__website place__website_link" href="https://vk.com/baikalmile"
               target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="../images/place-winter-baikal.jpg" alt="Зимний Байкал">
@@ -137,8 +137,8 @@
         <div class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a class="place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+            <p class="place__website place__website_url-heading">URL</p>
+            <a class="place__website place__website_link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="../images/place-karelia.jpg" alt="Корелия">
           <div>
