--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" src="../images/header-logo.svg" alt="Изображение карты России">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Изображение карты России">
       <div class="header__lang">
         <a class="header__lang-link header__lang-link_decoration" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
