--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img class="header__logo" src="../images/header-logo.svg" alt="Изображение карты России">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Изображение карты России">
       <div class="header__lang">
         <a class="header__lang-link header__lang-link_decoration" href="#">Ru</a>
         <a class="header__lang-link" href="#">En</a>
@@ -22,7 +22,7 @@
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <h2 class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках
           новостей, а&nbsp;здесь.</h2>
-        <img class="lead__image" src="../images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
         <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
       </section>
       <section class="intro">
@@ -44,18 +44,18 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="/images/photo-grid-train.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-atharva-tulsi.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-tuman.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-sochi.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-arisa.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-baikal.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-elbrus.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-kondratiev.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-1.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-kamchatka-2.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-baikal-2.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="/images/photo-grid-ergaki.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./image/photo-grid-train.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото из окна вагона">
       </section>
       <section class="places">
         <div class="place">
@@ -64,7 +64,7 @@
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="../images/place-kosa.jpg" alt="Куршская коса">
+          <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__container-text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -84,7 +84,7 @@
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
               Geographic</a>
           </div>
-          <img class="place__image" src="../images/place-kolsky.jpg" alt="Кольский">
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский">
           <div class="place__container-text">
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
               на
@@ -104,7 +104,7 @@
             <a class="place__website place__website_link"
               href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
-          <img class="place__image" src="../images/place-altai.jpg" alt="Алтай">
+          <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
           <div class="place__container-text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
@@ -123,7 +123,7 @@
             <a class="place__website place__website_link" href="https://vk.com/baikalmile"
               target="_blank">https://vk.com/baikalmile</a>
           </div>
-          <img class="place__image" src="../images/place-winter-baikal.jpg" alt="Зимний Байкал">
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__container-text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
@@ -142,7 +142,7 @@
             <a class="place__website place__website_link" href="http://vodlozero.ru"
               target="_blank">http://vodlozero.ru/</a>
           </div>
-          <img class="place__image" src="../images/place-karelia.jpg" alt="Корелия">
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Корелия">
           <div class="place__container-text">
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
               лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
