--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="content-type" content="text/html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
@@ -12,18 +13,21 @@
   <div class="page__container">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Изображение карты России">
-      <div class="header__lang">
-        <a class="header__lang-link header__lang-link_decoration" href="#">Ru</a>
-        <a class="header__lang-link" href="#">En</a>
-      </div>
+      <ul class="header__lang">
+        <li><a class="header__lang-link header__lang-link_decoration" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
+      </ul>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках
-          новостей, а&nbsp;здесь.</h2>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
-        <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
+        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках
+          новостей, а&nbsp;здесь.</p>
+        <figure class="lead__figure">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
+          <figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
+        </figure>
+        <!--<p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>-->
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -36,29 +40,29 @@
           мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов <span>11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span>12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span>16</span></li>
-          <li>Природных заповедников <span>105</span></li>
-          <li>Аэропортов <span>241</span></li>
+          <li>Часовых поясов <span class="intro__span-accent">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+          <li>Природных заповедников <span class="intro__span-accent">105</span></li>
+          <li>Аэропортов <span class="intro__span-accent">241</span></li>
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./image/photo-grid-train.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото из окна вагона">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из окна вагона">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака на вершине горы">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="сабака на стоге сена в поле">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="автомобиль на льду озера">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото на берегу озера">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="покрытые снегом вершины гор">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак пешеходный переход">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="холмы в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото скалы на берегу моря">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото туман на вершине горы">
       </section>
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -75,12 +79,12 @@
               и
               запах стального, прохладного моря.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link"
+            <p class="place__url-heading">URL</p>
+            <a class="place__link"
               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
               Geographic</a>
           </div>
@@ -96,12 +100,12 @@
               накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
               в Мурманск.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link"
+            <p class="place__url-heading">URL</p>
+            <a class="place__link"
               href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
@@ -115,12 +119,12 @@
               равнинах
               пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link" href="https://vk.com/baikalmile"
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://vk.com/baikalmile"
               target="_blank">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
@@ -134,12 +138,12 @@
               к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <p class="place__website place__website_url-heading">URL</p>
-            <a class="place__website place__website_link" href="http://vodlozero.ru"
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://vodlozero.ru"
               target="_blank">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Корелия">
@@ -151,7 +155,7 @@
               В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="cover">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
@@ -163,11 +167,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__nav">
-        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+        <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
       </nav>
       <p class="footer__copyright">© 2022. Сухов Андрей</p>
     </footer>
