--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <img class="lead__image" src="./images/lead-polka.jpg" alt="Девушка на кровати в вагоне поезда">
           <figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
         </figure>
-        <!--<p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>-->
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -167,11 +166,11 @@
     </main>
     <footer class="footer">
       <nav class="footer__nav">
-        <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
       </nav>
       <p class="footer__copyright">© 2022. Сухов Андрей</p>
     </footer>
