--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="content-type" content="text/html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
+  <meta name="author" content="Сухов Андрей">
+  <meta name="description" content="Рассказываем о путешествиии на поезде через всю Россию">
+  <meta name="keywords" content="Путешествия, Россия">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -46,19 +49,45 @@
           <li>Аэропортов <span class="intro__span-accent">241</span></li>
         </ul>
       </section>
-      <section class="photo-grid">
+      <section class="photo-grid__content">
+        <ul class="photo-grid">
+          <li>
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из окна вагона">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="облака на вершине горы">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="сабака на стоге сена в поле">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="автомобиль на льду озера">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="фото на берегу озера">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="покрытые снегом вершины гор">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак пешеходный переход">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="холмы в тумане">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="фото горы">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="фото скалы на берегу моря">
+      </li>
+      <li>
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="фото туман на вершине горы">
+      </li>
+        </ul>
       </section>
       <section class="places">
         <article class="place">
