--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li>Аэропортов <span class="intro__span-accent">241</span></li>
         </ul>
       </section>
-      <section class="photo-grid__content">
+      <section class="photo">
         <ul class="photo-grid">
           <li>
             <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="фото из окна вагона">
